--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -12,12 +12,15 @@
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
-<body> 
+<body>
   <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="face logo"/></a>
-    <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
-    <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
+      <div class="navlink"><a id="profileButton" href="/profile">Profile</a></div>
+      <div class="navlink"><a href="/logout">Log out</a></div>
   </nav>
-  <section id="content"></section>
-  <script src="/assets/loginBundle.js"></script>
+  <section id="addEntry">
+  </section>
+  <section id="entries">
+  </section>
+  <script src="/assets/mainBundle.js"></script>
 </body>
 </html>
