Remove all references to domo

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -47,7 +47,7 @@ nav:nth-child(1) {
     background-color: #66bdff;
 }
 
-.domoForm {
+.entryForm {
     border: 2px solid #338acc;
     height: 35px;
     width: 900px;
@@ -58,7 +58,7 @@ nav:nth-child(1) {
     border-top-right-radius: 4px;
 }
 
-.domoForm label {
+.entryForm label {
     display: inline-block;
     width: 75px;
     margin-left: 10px;
@@ -67,39 +67,8 @@ nav:nth-child(1) {
     color: white;
 }
 
-.domoForm input[type=text] {
+.entryForm input[type=text] {
     float:left;
-}
-
-.makeDomoSubmit {
-    transition: background-color 0.4s ease;
-    display: inline;
-    width: 90px;
-    background-color: #55acee;
-    border-radius: 2px;
-    color: white;
-    text-decoration: none;
-}
-
-.removeDomoSubmit {
-    transition: background-color 0.4s ease;
-    /*display: inline;*/
-    /*width: 90px;*/
-    background-color: #55acee;
-    border-radius: 2px;
-    color: white;
-    text-decoration: none;
-    float: right;
-}
-
-.makeDomoSubmit:link, .makeDomoSubmit:visited, .makeDomoSubmit:hover, .makeDomoSubmit:active,
-.removeDomoSubmit:link, .removeDomoSubmit:visited, .removeDomoSubmit:hover, .removeDomoSubmit:active {
-    color: white;
-}
-
-.makeDomoSubmit:hover, .removeDomoSubmit:hover {
-    transition: background-color 0.4s ease;
-    background-color: #338acc;
 }
 
 .mainForm {
@@ -159,30 +128,6 @@ nav:nth-child(1) {
     box-shadow: 0px 0px 1px 1px #55acee;
 }
 
-#domoMessage {
-    display:none;
-    top: 250px;
-    width: 250px;
-    height: 650px;
-    position: absolute;
-    z-index: 200;
-    right: 0px;
-    overflow: hidden;
-}
-
-#domoMessage h3 {
-    width: 200px;
-    position: absolute;
-    top: 0px;
-    left: 20px;
-}
-
-#speech {
-    height: 120px;
-    width: 250px;
-    z-index:300;
-}
-
 #errorMessage {
     font-size: 1.2em;
     font-weight: bold;
@@ -190,7 +135,7 @@ nav:nth-child(1) {
     font-style: italic;
 }
 
-#domo {
+#entry {
     z-index: 225;
     margin-top: -20px;
     margin-left: 135px;
@@ -201,7 +146,7 @@ nav:nth-child(1) {
     transform: rotate(330deg);
 }
 
-#domos {
+#entries {
     width: 40%;
     min-width: 400px;
     border: 2px solid #55acee;
@@ -211,7 +156,7 @@ nav:nth-child(1) {
     padding: 0px 12px 0px 8px;
 }
 
-.domoEntry {
+.Entry {
     width: 95%;
     margin: 0 auto;
     margin-top: 2px;
@@ -224,14 +169,14 @@ nav:nth-child(1) {
     overflow: hidden;
 }
 
-.domoEntry:hover {
+.Entry:hover {
     transition: border-color 0.2s ease-out;
     border-color: rgba(255,255,255, 0.8);
     transition: background-color 2.6s ease-out;
     background-color: #66bfff;
 }
 
-img.domoFace {
+img.Entry {
     margin-left: 25px;
     margin-right: 10px;
     height: 50px;
@@ -239,46 +184,4 @@ img.domoFace {
     border-radius: 4px;
     margin-top:10px;
     float:left;
-}
-
-h3.emptyDomo {
-    width: 400px;
-    font-size: 1.5em;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 18px;
-}
-
-h3.domoName {
-    float:left;
-    width: 200px;
-    font-weight: bold;
-    padding-left: 65px;
-    font-size: 1.5em;
-}
-
-h3.domoAge {
-    float:right;
-    text-align: left;
-    width: 100px;
-    font-weight: bold;
-    padding-right: 40px;
-    font-size: 1.5em;
-}
-
-h3.domoLevel {
-    float:right;
-    text-align: left;
-    width: 100px;
-    font-weight: bold;
-    padding-right: 40px;
-    font-size: 1.5em;
-}
-
-.domo:first-child {
-    margin-top: 10px;
-}
-
-.domo:last-child {
-    margin-bottom:10px;
 }
