Add functionality to update subscription status

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -14,12 +14,14 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="face logo"/></a>
-      <div class="navlink"><a id="profileButton" href="/profile">Profile</a></div>
-      <div class="navlink"><a href="/logout">Log out</a></div>
+      <div class="navlink" id="second"><a id="profileButton" href="/profile">Profile</a></div>
+      <div class="navlink" id="first"><a href="/logout">Log out</a></div>
   </nav>
   <section id="addEntry">
   </section>
   <section id="entries">
+  </section>
+  <section id="summary">
   </section>
   <script src="/assets/mainBundle.js"></script>
 </body>
