--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,8 +14,8 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="face logo"/></a>
-      <div class="navlink"><a id="entriesButton" href="/main">Entries</a></div>
-      <div class="navlink"><a href="/logout">Log out</a></div>
+      <div class="navlink" id="second"><a id="entriesButton" href="/main">Entries</a></div>
+      <div class="navlink" id="first"><a href="/logout">Log out</a></div>
   </nav>
   <section id="editProfile">
   </section>
