--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,15 +1,31 @@
+/*
+Color Pallet
+#C4A69D : TUSCANY
+#98A886 : GRULLO
+#465C69 : DEEP SPACE SPARKLE
+#363457 : DEEP KOAMARU
+#735290 : DARK LAVENDER
+#CDDDDD : GAINSBORO
+*/
+
 html, body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background-color: #ddd;
+}
+
+a {
+    padding: 10px;
 }
 
 #logo {
     height: 40px;
     width: 40px;
-    padding-top: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
     float:left;
     border-radius: 8px;
 }
@@ -17,7 +33,7 @@ html, body {
 nav {
     width: 100%;
     height: 50px;
-    background-color: #55acee;
+    background-color: #363457;
 }
 
 nav:nth-child(1) {
@@ -25,20 +41,23 @@ nav:nth-child(1) {
 }
 
 .navlink {
-    padding: 5px;
-    padding-top: 12px;
-    padding-left: 20px;
-    color: white;
+    margin: 5px;
+    margin-top: 12px;
+    color: #C4A69D;
     font-size: 1.3em;
-    float: left;
+    float: right;
+}
+
+#second {
+    float:left
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
-    color: white;
+    color: #C4A69D;
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #465C69;
     transition: background-color 0.4s ease;
 }
 
@@ -47,28 +66,46 @@ nav:nth-child(1) {
     background-color: #66bdff;
 }
 
+#addEntry {
+    width: 100%;
+    height: 50px;
+    background-color: #274156;
+}
+
 .entryForm {
-    border: 2px solid #338acc;
+    background-color: #735290;
+    border: 2px solid #C4A69D;
     height: 35px;
-    width: 900px;
     margin-top:0px;
     padding-top:10px;
-    background-color: #55acee;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
 
 .entryForm label {
     display: inline-block;
-    width: 75px;
+    /*width: 75px;*/
     margin-left: 10px;
     font-size: 1.2em;
     float: left;
-    color: white;
+    color: #C4A69D;
+}
+
+.entryForm select {
+    float: left;
 }
 
 .entryForm input[type=text] {
     float:left;
+}
+
+#entryAmount {
+    -webkit-appearance: none;
+    -mos-appearance: textfield;
+}
+
+.entrySubmit {
+    float: right;
 }
 
 .mainForm {
@@ -99,16 +136,16 @@ nav:nth-child(1) {
     margin-top: 14px;
     font-size: 1.2em;
     width: 100px;
-    background-color: #55acee;
+    background-color: #274156;
     border-radius: 2px;
-    border-color: #66acee;
+    border-color: #363457;
     padding: 3px 0px;
-    color: white;
+    color: #C4A69D;
     text-decoration: none;
 }
 
 .formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-    color: white;
+    color: #C4A69D;
 }
 
 .formSubmit:hover {
@@ -152,7 +189,7 @@ nav:nth-child(1) {
     border: 2px solid #55acee;
     border-radius: 4px;
     margin: 0 auto;
-    margin-top: 100px;
+    /*margin-top: 100px;*/
     padding: 0px 12px 0px 8px;
 }
 
@@ -171,7 +208,7 @@ nav:nth-child(1) {
 
 .Entry:hover {
     transition: border-color 0.2s ease-out;
-    border-color: rgba(255,255,255, 0.8);
+    border-color: #363457;
     transition: background-color 2.6s ease-out;
     background-color: #66bfff;
 }
@@ -184,4 +221,53 @@ img.Entry {
     border-radius: 4px;
     margin-top:10px;
     float:left;
+}
+
+/* TABLE STYLING */
+#title {
+    text-align: center;
+    font-family: arial, sans-serif;
+}
+
+#entries {
+    text-align: center;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    border: 3px solid #ddd;
+    width: 100%;
+}
+
+#entries td, #entries th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#entries tr:nth-child(even){background-color: #f2f2f2;}
+
+#entries tr:hover {background-color: #CDDDDD;}
+
+#entries th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #363457;
+    color: #C4A69D;
+}
+
+#totalRow {
+    font-weight: bold;
+}
+
+#trashButton {
+    width: 25px;
+    height: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#tableBody {
+    display:inline-table;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
