--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,8 +14,8 @@
 </head>
 <body> 
   <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="face logo"/></a>
-    <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
-    <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
+    <div class="navlink" id="second"><a id="loginButton" href="/login">Login</a></div>
+    <div class="navlink" id="first"><a id="signupButton" href="/signup">Sign up</a></div>
   </nav>
   <section id="content"></section>
   <script src="/assets/loginBundle.js"></script>
