--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,12 +12,14 @@
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="face logo"/></a>
-      <div class="navlink" id="second"><a id="entriesButton" href="/main">Entries</a></div>
-      <div class="navlink" id="first"><a href="/logout">Log out</a></div>
+<div id="container">
+  <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="scale logo"/></a>
+      <div class="navlink" id="first"><a id="entriesButton" href="/main">Entries</a></div>
+      <div class="navlink" id="second"><a href="/logout">Log out</a></div>
   </nav>
   <section id="editProfile">
   </section>
+</div>
   <script src="/assets/profileBundle.js"></script>
 </body>
 </html>
