--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,6 +1,5 @@
 /*
 Color Pallet
-#C4A69D : TUSCANY
 #98A886 : GRULLO
 #465C69 : DEEP SPACE SPARKLE
 #363457 : DEEP KOAMARU
@@ -14,7 +13,64 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: #ddd;
+    background-color: #465C69;
+}
+
+#baseContainer {
+    background-color: #CDDDDD;
+    position: fixed;
+    text-align: center;
+    width: 80%;
+    height:80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+}
+
+nav {
+    position:relative;
+    width: 98%;
+    height: 100px;
+    background-color: #363457;
+    border-radius:10px;
+}
+
+#addEntryContainer {
+    position: relative;
+    width: 80%;
+    height: 30px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    margin-top: 30px;
+}
+
+#content {
+    position: absolute;
+    height: inherit;
+    width: 99%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+#breakdownContainer {
+    width: 99%;
+    height: 45%;
+    -ms-overflow-style: none;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#summaryContainer {
+    width: 99%;
+    height: 45%;
+    -ms-overflow-style: none;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.scrollbarStyles {
+    -ms-overflow-style: none;
 }
 
 a {
@@ -22,40 +78,39 @@ a {
 }
 
 #logo {
-    height: 40px;
-    width: 40px;
-    margin-top: 5px;
-    margin-left: 5px;
+    height: 100%;
+    width: auto;
+
     float:left;
     border-radius: 8px;
 }
 
-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #363457;
-}
-
 nav:nth-child(1) {
-    padding-left: 25px;
+    padding: 1%;
 }
 
 .navlink {
-    margin: 5px;
-    margin-top: 12px;
-    color: #C4A69D;
+    color: #CDDDDD;
     font-size: 1.3em;
     float: right;
 }
 
+#first {
+    width: 100px;
+    margin-bottom: 1%;
+}
+
 #second {
-    float:left
+    position: relative;
+    clear: right;
+    float: right;
+    width: 100px;
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
-    color: #C4A69D;
+    display: block;
+    color: #CDDDDD;
     text-decoration: none;
-    padding: 5px;
     border-radius: 4px;
     background-color: #465C69;
     transition: background-color 0.4s ease;
@@ -63,40 +118,25 @@ nav:nth-child(1) {
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: #66bdff;
+    color: #465C69;
+    background-color: #CDDDDD;
+}
+
+.entryForm {
+    clear:left;
+}
+
+.entryFormElement {
+    float: left;
+    padding: 5px;
+    height: 30px;
 }
 
 #addEntry {
     width: 100%;
     height: 50px;
     background-color: #274156;
-}
-
-.entryForm {
-    background-color: #735290;
-    border: 2px solid #C4A69D;
-    height: 35px;
-    margin-top:0px;
-    padding-top:10px;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-.entryForm label {
-    display: inline-block;
-    /*width: 75px;*/
-    margin-left: 10px;
-    font-size: 1.2em;
-    float: left;
-    color: #C4A69D;
-}
-
-.entryForm select {
-    float: left;
-}
-
-.entryForm input[type=text] {
-    float:left;
+    border-radius: 10px;
 }
 
 #entryAmount {
@@ -109,22 +149,12 @@ nav:nth-child(1) {
 }
 
 .mainForm {
-    height: 300px;
-    width: 350px;
-    margin: 0 auto;
-    padding-top: 350px;
-    font-size: 1.2em;
-}
-
-.mainForm h3 {
-    text-align: center;
-}
-
-.mainForm label {
-    display: inline-block;
-    width: 100px;
-    margin-right: 10px;
-    text-align: right;
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
     font-size: 1.2em;
 }
 
@@ -140,12 +170,12 @@ nav:nth-child(1) {
     border-radius: 2px;
     border-color: #363457;
     padding: 3px 0px;
-    color: #C4A69D;
+    color: #CDDDDD;
     text-decoration: none;
 }
 
 .formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-    color: #C4A69D;
+    color: #CDDDDD;
 }
 
 .formSubmit:hover {
@@ -153,16 +183,65 @@ nav:nth-child(1) {
     background-color: #338acc;
 }
 
-#user, #pass, #pass2 {
-    text-align: center;
-    font-size: 1.1em;
-    width: 180px;
-    border-radius: 6px;
+.userLabelLogin {
+    float: left;
+    margin-bottom: 15px;
 }
 
-#user:focus, #pass:focus, #pass2:focus {
-    outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
+.userInputLogin {
+    position: relative;
+    float: right;
+}
+
+.passLabelLogin {
+    clear: left;
+    float: left;
+}
+
+.passInputLogin {
+    position: relative;
+    clear: right;
+    float: right;
+}
+
+.firstnameLabelReg {
+    float: left;
+    margin-bottom: 15px;
+}
+
+.lastnameLabelReg, .usernameLabelReg, .password1LabelReg, .password2LabelReg {
+    clear: left;
+    float: left;
+    margin-bottom: 15px;
+}
+
+.firstnameInputReg {
+    position: relative;
+    float:right;
+}
+
+.lastnameInputReg, .usernameInputReg, .password1InputReg, .password2InputReg {
+    clear: right;
+    float: right;
+}
+
+.signIn {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.signUp {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#firstn, #lastn, #user, #pass, #pass2 {
+    text-align: center;
+    font-size: 1.1em;
 }
 
 #errorMessage {
@@ -172,8 +251,45 @@ nav:nth-child(1) {
     font-style: italic;
 }
 
+#loginErrorParagraph {
+    width: inherit;
+}
+
+#loginError {
+    position: absolute;
+    display: none;
+    color: #555;
+    border-radius: 5px;
+    font-family: Tahoma, Geneva, Arial, sans-serif;
+    font-size: .8em;
+    padding:5px 5px 5px 30px;
+    margin:-4px 0px 0px 0px;
+    background:#ffecec url('http://www.html5accessibility.com/images/cross.png') no-repeat 10px 50%;
+    border:2px solid #f5aca6;
+    width: inherit;
+    text-align: center;
+}
+
+#entryErrorParagraph {
+    width: inherit;
+}
+
+#entryError {
+    position: absolute;
+    display: none;
+    color: #555;
+    border-radius: 5px;
+    font-family: Tahoma, Geneva, Arial, sans-serif;
+    font-size: .8em;
+    padding:5px 5px 5px 30px;
+    margin:-4px 0px 0px 0px;
+    background:#ffecec url('http://www.html5accessibility.com/images/cross.png') no-repeat 10px 50%;
+    border:2px solid #f5aca6;
+    width: inherit;
+    text-align: center;
+}
+
 #entry {
-    z-index: 225;
     margin-top: -20px;
     margin-left: 135px;
     height: 450px;
@@ -189,8 +305,6 @@ nav:nth-child(1) {
     border: 2px solid #55acee;
     border-radius: 4px;
     margin: 0 auto;
-    /*margin-top: 100px;*/
-    padding: 0px 12px 0px 8px;
 }
 
 .Entry {
@@ -251,7 +365,7 @@ img.Entry {
     padding-bottom: 12px;
     text-align: center;
     background-color: #363457;
-    color: #C4A69D;
+    color: #CDDDDD;
 }
 
 #totalRow {
