--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,24 @@
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Payyalator</title>
+    <meta charset="utf-8"/>
+    <title>Payyalator</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
-  <link rel="shortcut icon" href="/assets/img/favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+    <link rel="shortcut icon" href="/assets/img/favicon.png"/>
+    <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
-<body> 
-  <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="face logo"/></a>
-    <div class="navlink" id="second"><a id="loginButton" href="/login">Login</a></div>
-    <div class="navlink" id="first"><a id="signupButton" href="/signup">Sign up</a></div>
-  </nav>
-  <section id="content"></section>
-  <script src="/assets/loginBundle.js"></script>
+<body>
+<div id="container">
+    <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="scale logo"/></a>
+        <div class="navlink" id="first"><a id="loginButton" href="/login">Login</a></div>
+        <div class="navlink" id="second"><a id="signupButton" href="/signup">Sign up</a></div>
+    </nav>
+    <section id="content"></section>
+</div>
+<script src="/assets/loginBundle.js"></script>
 </body>
 </html>
