--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
 <body>
-<div id="container">
+<div id="baseContainer">
     <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="scale logo"/></a>
         <div class="navlink" id="first"><a id="loginButton" href="/login">Login</a></div>
         <div class="navlink" id="second"><a id="signupButton" href="/signup">Sign up</a></div>
