fix broken div reference

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
 <body>
-<div id="container">
+<div id="baseContainer">
   <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="scale logo"/></a>
       <div class="navlink" id="first"><a id="entriesButton" href="/main">Entries</a></div>
       <div class="navlink" id="second"><a href="/logout">Log out</a></div>
