--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Payyalator</title>
+    <title>PayYaLator</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
@@ -13,7 +13,9 @@
 </head>
 <body>
 <div id="baseContainer">
-    <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="scale logo"/></a>
+    <nav>
+        <a href="/login"><img id="logo" src="/assets/img/scale_small.png" alt="scale logo"/></a>
+        <h1 id="pageTitle">PayYaLator</h1>
         <div class="navlink" id="first"><a id="profileButton" href="/profile">Profile</a></div>
         <div class="navlink" id="second"><a href="/logout">Log out</a></div>
     </nav>
