--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,25 +1,29 @@
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Payyalator</title>
+    <meta charset="utf-8"/>
+    <title>PayYaLator</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
-  <link rel="shortcut icon" href="/assets/img/favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+    <link rel="shortcut icon" href="/assets/img/favicon.png"/>
+    <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
 <body>
 <div id="baseContainer">
-  <nav><a href="/login"><img id="logo" src="/assets/img/scale.png" alt="scale logo"/></a>
-      <div class="navlink" id="first"><a id="entriesButton" href="/main">Entries</a></div>
-      <div class="navlink" id="second"><a href="/logout">Log out</a></div>
-  </nav>
-  <section id="editProfile">
-  </section>
+    <nav>
+        <a href="/login"><img id="logo" src="/assets/img/scale_small.png" alt="scale logo"/></a>
+        <h1 id="pageTitle">PayYaLator</h1>
+        <div class="navlink" id="first"><a id="entriesButton" href="/main">Entries</a></div>
+        <div class="navlink" id="second"><a href="/logout">Log out</a></div>
+    </nav>
+    <section id="profileSection">
+    </section>
+    <section id="passwordSection">
+    </section>
 </div>
-  <script src="/assets/profileBundle.js"></script>
+<script src="/assets/profileBundle.js"></script>
 </body>
 </html>
